tests/negative/gold/duplicated-global-assign-test.gold
tests/negative/duplicated-global-assign-test.toit:6:1: error: Redefinition of 'global'
global := 3
^~~~~~
tests/negative/duplicated-global-assign-test.toit:5:1: note: First definition of 'global'
global := 3
^~~~~~
Compilation failed
